force-app/main/default/objects/BrillioFC__Record_Types__c/BrillioFC__Record_Types__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Record Type</label>
    <nameField>
        <label>ForceClinic Record Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Record Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>