force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__BusinessProcessId__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__BusinessProcessId__c</fullName>
    <label>BusinessProcessId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>