force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__Count_of_Page_Layout_Assignment__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Count_of_Page_Layout_Assignment__c</fullName>
    <label>Count of Page Layouts Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>