force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__Description__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>