force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__EntityDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__EntityDefinitionId__c</fullName>
    <label>EntityDefinitionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>