force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__Is_Assigned_To_Profile__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Is_Assigned_To_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assigned To Profile?</label>
    <type>Checkbox</type>
</CustomField>