force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__ManageableState__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ManageableState__c</fullName>
    <label>ManageableState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>