force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>