force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__NamespacePrefix__c</fullName>
    <label>NamespacePrefix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>