force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__Object_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Detail__c</fullName>
    <label>Object Detail</label>
    <referenceTo>BrillioFC__Object_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Record Types</relationshipLabel>
    <relationshipName>Record_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>