force-app/main/default/objects/BrillioFC__Record_Types__c/fields/BrillioFC__SobjectType__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__SobjectType__c</fullName>
    <label>SobjectType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>